--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         <a href="https://wa.me/message/MRXMXN7M6BSFG1" target="_blank" class="btn">CONTACT WITH ME</a>
                 </div>
                 <div class="Hero-images">
-                    <img src="imgg.jpeg" alt="Foto de Perfil">
+                    <img src="foto.jpeg" alt="Foto de Perfil">
                 </div>
             </div>
         </section>
@@ -77,4 +77,5 @@
 
 
 </body>
+
 </html>
