--- a/index.html
+++ b/index.html
@@ -43,6 +43,26 @@
                 </div>
             </div>
         </section>
+
+        <section id="Charla" class="Hero">
+                <div class="Hero-content-charla">
+                    <div class="Hero-text">
+                        <h3>Think Big</h3>
+                        <p>
+                            A los 17 años tuve la oportunidad de ser ponente en TEDx, convirtiéndome en el ecuatoriano más joven en dar una charla en este escenario, donde compartí una reflexión sobre mentalidad, propósito y visión a largo plazo. Mi mensaje fue claro: la edad no define el impacto, lo define la dirección. Esta experiencia reforzó mi convicción de que la tecnología, cuando nace con propósito, puede convertirse en el motor de cambio para nuevas generaciones.
+                        </p>
+                    </div>
+
+                <div class="Hero-video">
+                    <iframe src="https://www.youtube.com/embed/jtAKxKOLcGw"
+                        title="YouTube video player"
+                        allowfullscreen>
+                    </iframe>
+                </div>
+
+            </div>
+        </section>
+
 <footer class="main-footer">
     <div class="footer-content">
         <div class="footer-logo">
@@ -75,6 +95,7 @@
 </body>
 
 </html>
+
 
 
 
