--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
                         <a href="https://wa.me/593981045802?text=Hola%20estoy%20interesado%20en%20más%20información
 " target="_blank" class="btn">CONTACT WITH ME</a>
                         <a href="https://drive.google.com/file/d/1OWQTyX1IuMuZ-dax415e8aZktOrM4CiP/view" target="_blank" class="btn">DOWNLOAD CV</a>
+                        <a href="contacto.vcf" download class="btn">ADD ME TO CONTACTS</a>
                 </div>
                 <div class="Hero-images">
                     <img src="foto.jpeg" alt="Foto de Perfil">
@@ -96,6 +97,7 @@
 </body>
 
 </html>
+
 
 
 
