--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@ function sendMessage(message) {
     const url = `https://wa.me/${phoneNumber}?text=${encodeURIComponent(message)}`;
     window.open(url, "_blank");
 }
+</script>
 <body>
     <!--Button WhatsApp-->
     <div class="w-btn" onclick="toggleChat()">
@@ -142,6 +143,7 @@ function sendMessage(message) {
 </body>
 
 </html>
+
 
 
 
