--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ function sendMessage(message) {
                         <a href="contacto.vcf" download class="btn">ADD ME TO CONTACTS</a>
                 </div>
                 <div class="Hero-images">
-                    <img src="foto.jpeg" alt="Foto de Perfil">
+                    <img src="iconooo.png" alt="Foto de Perfil">
                 </div>
             </div>
         </section>
@@ -143,6 +143,7 @@ function sendMessage(message) {
 </body>
 
 </html>
+
 
 
 
